clear the console & finised v1

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -19,6 +19,8 @@
             <h1>
               Hello <%= user.firstName %> , your account has been activated!!!
             </h1>
+            Now you can login here,
+            <a class="underline" href="/api/v1/login">Login</a>
           </div>
         </div>
       </div>
